@@ -7,6 +7,10 @@
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 -----------------+-----------+--------------------------------------------------
 
+HP-2011-05-02-0: Bugfix:     scale_timeout() calculated wrong in case of
+                             NFS spooling
+                 Review:     SH
+
 JG-2011-05-02-0: Cleanup:    removed sge vs. sgeee code, minor cleanup.
                  Review:     EB
 
